# rrosenq-idapy-sagakar-dombos-project

./: .gitignore  README.md  specification.md
client-with-frontend/: package-lock.json  package.json  vite.config.ts
client-with-frontend/src/: App.css  App.tsx  LoginPage.tsx  main.tsx
client-with-frontend/src-tauri/: Cargo.toml  tauri.conf.json
client-with-frontend/src-tauri/src/: main.rs
client-with-frontend/src/components/: ChannelMenu.tsx  ChatDisplay.tsx  Chatbox.tsx  Message.tsx  Navbar.tsx  Sidebar.tsx
client-with-frontend/src/pages/: ChatPage.tsx  DMPage.tsx  ProfilePage.tsx  ServerPage.tsx  SettingsPage.tsx
client/src/: chat.html  chat.js  index.html  main.js  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  LoginPage.tsx  main.tsx
frontend/src/components/: ChannelData.tsx  ChannelMenu.tsx  ChatDisplay.tsx  Chatbox.tsx  DMData.tsx  Navbar.tsx  SidebarData.tsx
frontend/src/pages/: ChatPage.tsx  DMPage.tsx  HomePage.tsx  ProfilePage.tsx  SettingsPage.tsx
server/: Cargo.toml  config.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
