[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.115"
tokio = {version = "1.37.0", features = ["full"]}
toml = "0.8.12"
shared = {path = "../shared"}
rusqlite = "0.31.0"
rand = "0.8.5"
sha2 = "0.10.8"
base64ct = { version = "1.6.0", features = ["alloc"] }
